Add REST API for retrieving the current user
